# BotGM

./: CMakeLists.txt  FenSupporter.cpp  README.md  board.cpp  board.h  fenSupporter.cpp  fenSupporter.h  main.cpp
UCI/: command.cpp  command.h  commandExecutor.h
